# paper_elobaid_2023_icra_walking_with_payloads

./: .gitignore  README.md
ReducedModelControllers/: CMakeLists.txt
ReducedModelControllers/src/: ParametrizedCentroidalMPC.cpp
application/: CMakeLists.txt
application/cmake/: AddCentroidalMPCWalkingLibrary.cmake  AddCentroidalMPCWalkingUnitTest.cmake
code/ParametrizedCentroidalMPC/src/centroidal-mpc-walking/: CMakeLists.txt
code/ParametrizedCentroidalMPC/src/centroidal-mpc-walking/config/robots/ergoCubGazeboV1/: centroidal_mpc.ini  centroidal_mpc_walking.ini  ik.ini
code/ParametrizedCentroidalMPC/src/centroidal-mpc-walking/config/robots/ergoCubSN000/: centroidal_mpc.ini  centroidal_mpc_walking.ini  data_visualization.m  plotFancy.m
code/ParametrizedCentroidalMPC/src/centroidal-mpc-walking/config/robots/iCubGazeboV2_5/: base_estimation.ini  centroidal_mpc.ini  centroidal_mpc_walking.ini  ik.ini
code/ParametrizedCentroidalMPC/src/centroidal-mpc-walking/config/robots/iCubGazeboV3/: centroidal_mpc.ini  centroidal_mpc_walking.ini  footsteps.json  footsteps_fasr.json  old_dataSet.txt  sensor_bridge.ini
code/ParametrizedCentroidalMPC/src/centroidal-mpc-walking/config/robots/iCubGenova09/: centroidal_mpc.ini  centroidal_mpc_walking.ini
code/ParametrizedCentroidalMPC/src/centroidal-mpc-walking/include/CentroidalMPCWalking/: CentroidalMPCBlock.h  WholeBodyQPBlock.h
code/ParametrizedCentroidalMPC/src/centroidal-mpc-walking/src/: CentroidalMPCBlock.cpp  Main.cpp  WholeBodyQPBlock.cpp
world/: nopayload_world  world
world/small_box/: model.config  (+1 more)
(+15 files in other folders)
